--- a/README.messages.org
+++ b/README.messages.org
@@ -19,9 +19,9 @@ Lucky for me almost all the modifications to the db are indeed inserts of new im
 | "new-board": serialized board  | BoardManager.create                             | top-sekrit-board-creation-channel | Board, duh                       | not yet used                       |
 | "new-call": serialized call    | CallManager.create                              | table.pk, all-tables              | Call, duh                        |                                    |
 | "new-hand": serialized hand    | HandManager.create                              | table.pk, all-tables              | Hand, duh                        |                                    |
+| "new-play": serialized play    | PlayManager.create                              | table.pk, all-tables              | Play, duh                        |                                    |
 | table, contract, contract_text | hand.add_call_from_player                       | table.pk, all-tables              | n/a [2]                          | when the auction has settled       |
 | table, final_score             | hand.xscript                                    | table.pk, all-tables              | n/a [1]                          | when the last card has been played |
-| table, player, card            | hand.add_play_from_player                       | table.pk, all-tables              | Play                             |                                    |
 | table, seats, action           | table.TableManager.create_with_two_partnerships | all-tables                        | Table                            |                                    |
 
 [1] -- This is a side-effect of adding a new play (namely: the 52nd play), but doesn't *directly* correspond to an insert, in that we add lots of plays without sending this event!
