--- a/TODO.txt
+++ b/TODO.txt
@@ -14,6 +14,8 @@ IN PROGRESS:
 
 STILL TODO:
 
+* The "new board plz" button appears to do nothing
+
 * HEY! Bob can see *all* the cards at <https://erics-work-macbook-pro.tail571dc2.ts.net/api/boards/> ... I thought I fixed that :-(
 
   ... I need to put ACLs around "list" as well as around "retrieve", it seems.
