--- a/TODO.txt
+++ b/TODO.txt
@@ -168,7 +168,7 @@ STILL TODO:
 
 * when brenda speaks to james, but james' browser is looking at anything other than brenda's page, james needs to get an alert.
 
-* chat log should scroll to bottom on page load.
+* chat log should scroll to bottom on page load, the way the auction log does.
 
   Otherwise, if it's got a lotta crap in it, I wind up looking at the oldest (i.e., least-interesting) stuff.
 
