--- a/TODO.txt
+++ b/TODO.txt
@@ -20,6 +20,10 @@ IN PROGRESS:
 
 STILL TODO:
 
+* Rethink at least some of my URLS -- e.g. when I am looking at hand 97, and click a card to play it, the POST goes to e.g. "/play/94/".  I'd have expected it to go instead to "/play/97/", but that 94 is a *seat_id*, not a *hand* ID.  Confusing.
+
+* Seeing a number of `Invalid request: Can't resume session after stream-error.` errors in the console
+
 * https://erics-work-macbook-pro.tail571dc2.ts.net/hand/69/ shows `322:swabhiman_das (bot)` and yet the admin page shows (correctly) `swabhiman_das (independent)`
 
 * The SSE events for "a call was made at table X" and "a play was made at table X" should go to *all* users, regardless of whether they're sitting at the table, so their browsers will update when they watch the hand.
