--- a/TODO.txt
+++ b/TODO.txt
@@ -12,7 +12,7 @@ IN PROGRESS:
 
   Of course, switch my existing bot to use it, once it exists.
 
-  - Idea -- when stuff happens at a hand, or table, send the event to the relevant *players*, as well as to the table and hand.
+  Next up: have the apibot maintain its own HandTranscript, with which it can ... wait for it ... come up with its own calls and plays.
 
 STILL TODO:
 
