--- a/TODO.txt
+++ b/TODO.txt
@@ -30,11 +30,10 @@ STILL TODO:
 
 * Maybe prevent p1 from partnering up with p2 if they haven't played exactly the same sets of boards.
 
-* Couple problems with the hand archive:
-  - The layout of the play record doesn't quite conform to what [the style guide](Bridge Writing Style Guide by Richard Pavlicek.pdf) (page 5) says:
-    - I should have a column for the trick number *and* the compass direction of the leader;
-    - The column headers should be "Trick", "Lead", "2nd", "3rd", "4th";
-    - The 2nd, 3rd, 4th columns should omit the suit symbol if it's the same as the led suit
+* The layout of the play record doesn't quite conform to what [the style guide](Bridge Writing Style Guide by Richard Pavlicek.pdf) (page 5) says:
+  - I should have a column for the trick number *and* the compass direction of the leader;
+  - The column headers should be "Trick", "Lead", "2nd", "3rd", "4th";
+  - The 2nd, 3rd, 4th columns should omit the suit symbol if it's the same as the led suit
 
 * Rethink at least some of my URLS -- e.g. when I am looking at hand 97, and click a card to play it, the POST goes to e.g. "/play/94/".  I'd have expected it to go instead to "/play/97/", but that 94 is a *seat_id*, not a *hand* ID.  Confusing.
 
