--- a/TODO.txt
+++ b/TODO.txt
@@ -17,6 +17,9 @@ IN PROGRESS:
 
 STILL TODO:
 
+* Maybe prevent someone from playing the same board twice?  Or at least, don't keep any but the first score.
+  I've gone to a fair amount of effort preventing disclosure of boards that a player hasn't yet seen; this is sort of the opposite.
+
 * Indicate the winning trick with some sort of effect, like glowing or pulsing, rather than a sparkly emoji -- those take up space and thus mess up the layout.
 
 * The hand, while we're playing, does not show a running total of tricks taken by each side.
